# Mash-n-Burn

./: .gitignore  Cargo.toml
src/: entities.rs  explanation_scene.rs  game_scene.rs  logic.rs  main.rs  menu_scene.rs  scene.rs
src/logic/: car.rs  coin.rs  game.rs  mod.rs  obstacle.rs  potato.rs  scoring.rs  street.rs
