[package]
name = "mash-n-burn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["wav"] }
wasm-bindgen = "0.2.87"
rand = "*"

[profile.dev.package."*"]
opt-level = 3

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]